--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type":"module"
-  
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
